--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "city-roads",
+  "name": "roads-and-rails",
   "version": "1.0.0",
-  "description": "Visualization of all roads in a city",
-  "author": "Andrei Kashcha",
+  "description": "Visualization of all rails and roads in a city",
+  "author": "Tilman Haupt",
   "private": true,
   "scripts": {
     "dev": "vite",
